trunk/target/generated-sources/antlr3/org/apache/synapse/xpath/compiler/XPath1Parser.java
// $ANTLR 3.4 org/apache/synapse/xpath/compiler/XPath1.g 2013-07-19 08:05:12

	package org.apache.synapse.xpath.compiler;




import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;
import java.util.Map;
import java.util.HashMap;

import org.antlr.runtime.tree.*;


@SuppressWarnings({"all", "warnings", "unchecked"})
public class XPath1Parser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "ABBREVIATED_AXIS_STEP", "ANDEXPR", "ANY_NAMESPACED_NODE", "ANY_NODE", "ATTRIBUTE_AXIS", "AXISSPEC", "AbbreviatedAxisSpecifier", "AbbreviatedStep", "And", "AxisName", "AxisNameSeparator", "Colon", "Comma", "DecimalLiteral", "DoubleLiteral", "EQUEXPRESSION", "EXPRLIST", "EqualityOp", "FILTER", "FUNCALL", "IntegerLiteral", "LOCATION_PATH", "LeftParenthesis", "LeftSquareBracket", "Letter", "MULEXPRESSION", "MultiplicativeOP", "NAMED_AXIS_STEP", "NAME_AXIS", "NCName", "NUMBER", "NameSpacedQNAME", "NodeType", "OREXPR", "Or", "PREDI", "PREDICATE", "Pipe", "ProcessingInstruction", "QNAME", "QNAME_PREDICATE", "RELATIVELOC", "RELEXPRESSION", "RecursiveAxisStep", "RelationalOp", "RightParenthesis", "RightSquareBracket", "SIMPLE_AXIS_STEP", "STRING", "SingleAxisStep", "Star", "StringLiteral", "UNARYEXPRESSION", "UNIONEXPR", "UnaryOp", "VARREF", "VariableReference", "WS", "'-'"
    };

    public static final int EOF=-1;
    public static final int T__62=62;
    public static final int ABBREVIATED_AXIS_STEP=4;
    public static final int ANDEXPR=5;
    public static final int ANY_NAMESPACED_NODE=6;
    public static final int ANY_NODE=7;
    public static final int ATTRIBUTE_AXIS=8;
    public static final int AXISSPEC=9;
    public static final int AbbreviatedAxisSpecifier=10;
    public static final int AbbreviatedStep=11;
    public static final int And=12;
    public static final int AxisName=13;
    public static final int AxisNameSeparator=14;
    public static final int Colon=15;
    public static final int Comma=16;
    public static final int DecimalLiteral=17;
    public static final int DoubleLiteral=18;
    public static final int EQUEXPRESSION=19;
    public static final int EXPRLIST=20;
    public static final int EqualityOp=21;
    public static final int FILTER=22;
    public static final int FUNCALL=23;
    public static final int IntegerLiteral=24;
    public static final int LOCATION_PATH=25;
    public static final int LeftParenthesis=26;
    public static final int LeftSquareBracket=27;
    public static final int Letter=28;
    public static final int MULEXPRESSION=29;
    public static final int MultiplicativeOP=30;
    public static final int NAMED_AXIS_STEP=31;
    public static final int NAME_AXIS=32;
    public static final int NCName=33;
    public static final int NUMBER=34;
    public static final int NameSpacedQNAME=35;
    public static final int NodeType=36;
    public static final int OREXPR=37;
    public static final int Or=38;
    public static final int PREDI=39;
    public static final int PREDICATE=40;
    public static final int Pipe=41;
    public static final int ProcessingInstruction=42;
    public static final int QNAME=43;
    public static final int QNAME_PREDICATE=44;
    public static final int RELATIVELOC=45;
    public static final int RELEXPRESSION=46;
    public static final int RecursiveAxisStep=47;
    public static final int RelationalOp=48;
    public static final int RightParenthesis=49;
    public static final int RightSquareBracket=50;
    public static final int SIMPLE_AXIS_STEP=51;
    public static final int STRING=52;
    public static final int SingleAxisStep=53;
    public static final int Star=54;
    public static final int StringLiteral=55;
    public static final int UNARYEXPRESSION=56;
    public static final int UNIONEXPR=57;
    public static final int UnaryOp=58;
    public static final int VARREF=59;
    public static final int VariableReference=60;
    public static final int WS=61;

    // delegates
    public Parser[] getDelegates() {
        return new Parser[] {};
    }

    // delegators


    public XPath1Parser(TokenStream input) {
        this(input, new RecognizerSharedState());
    }
    public XPath1Parser(TokenStream input, RecognizerSharedState state) {
        super(input, state);
    }

protected TreeAdaptor adaptor = new CommonTreeAdaptor();

public void setTreeAdaptor(TreeAdaptor adaptor) {
    this.adaptor = adaptor;
}
public TreeAdaptor getTreeAdaptor() {
    return adaptor;
}
    public String[] getTokenNames() { return XPath1Parser.tokenNames; }
    public String getGrammarFileName() { return "org/apache/synapse/xpath/compiler/XPath1.g"; }


    public static class xpath_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "xpath"
    // org/apache/synapse/xpath/compiler/XPath1.g:46:1: xpath : locationPath ;
    public final XPath1Parser.xpath_return xpath() throws RecognitionException {
        XPath1Parser.xpath_return retval = new XPath1Parser.xpath_return();
        retval.start = input.LT(1);


        CommonTree root_0 = null;

        XPath1Parser.locationPath_return locationPath1 =null;



        try {
            // org/apache/synapse/xpath/compiler/XPath1.g:46:6: ( locationPath )
            // org/apache/synapse/xpath/compiler/XPath1.g:46:8: locationPath
            {
            root_0 = (CommonTree)adaptor.nil();


            pushFollow(FOLLOW_locationPath_in_xpath229);
            locationPath1=locationPath();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) adaptor.addChild(root_0, locationPath1.getTree());

            }

            retval.stop = input.LT(-1);


            if ( state.backtracking==0 ) {

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "xpath"


    public static class locationPath_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "locationPath"
    // org/apache/synapse/xpath/compiler/XPath1.g:48:1: locationPath : ( relativeLocationPath | absoluteLocationPath );
    public final XPath1Parser.locationPath_return locationPath() throws RecognitionException {
        XPath1Parser.locationPath_return retval = new XPath1Parser.locationPath_return();
        retval.start = input.LT(1);


        CommonTree root_0 = null;

        XPath1Parser.relativeLocationPath_return relativeLocationPath2 =null;

        XPath1Parser.absoluteLocationPath_return absoluteLocationPath3 =null;



        try {
            // org/apache/synapse/xpath/compiler/XPath1.g:49:5: ( relativeLocationPath | absoluteLocationPath )
            int alt1=2;
            switch ( input.LA(1) ) {
            case AbbreviatedAxisSpecifier:
            case AbbreviatedStep:
            case AxisName:
            case NCName:
            case NodeType:
            case ProcessingInstruction:
            case Star:
                {
                alt1=1;
                }
                break;
            case RecursiveAxisStep:
            case SingleAxisStep:
                {
                alt1=2;
                }
                break;
            default:
                if (state.backtracking>0) {state.failed=true; return retval;}
                NoViableAltException nvae =
                    new NoViableAltException("", 1, 0, input);

                throw nvae;

            }

            switch (alt1) {
                case 1 :
                    // org/apache/synapse/xpath/compiler/XPath1.g:49:7: relativeLocationPath
                    {
                    root_0 = (CommonTree)adaptor.nil();


                    pushFollow(FOLLOW_relativeLocationPath_in_locationPath242);
                    relativeLocationPath2=relativeLocationPath();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, relativeLocationPath2.getTree());

                    }
                    break;
                case 2 :
                    // org/apache/synapse/xpath/compiler/XPath1.g:50:7: absoluteLocationPath
                    {
                    root_0 = (CommonTree)adaptor.nil();


                    pushFollow(FOLLOW_absoluteLocationPath_in_locationPath250);
                    absoluteLocationPath3=absoluteLocationPath();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, absoluteLocationPath3.getTree());

                    }
                    break;

            }
            retval.stop = input.LT(-1);


            if ( state.backtracking==0 ) {

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "locationPath"


    public static class absoluteLocationPath_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "absoluteLocationPath"
    // org/apache/synapse/xpath/compiler/XPath1.g:53:1: absoluteLocationPath : ( SingleAxisStep | SingleAxisStep relativeLocationPath -> ^( RELATIVELOC SingleAxisStep relativeLocationPath ) | abbreviatedAbsoluteLocationPath );
    public final XPath1Parser.absoluteLocationPath_return absoluteLocationPath() throws RecognitionException {
        XPath1Parser.absoluteLocationPath_return retval = new XPath1Parser.absoluteLocationPath_return();
        retval.start = input.LT(1);


        CommonTree root_0 = null;

        Token SingleAxisStep4=null;
        Token SingleAxisStep5=null;
        XPath1Parser.relativeLocationPath_return relativeLocationPath6 =null;

        XPath1Parser.abbreviatedAbsoluteLocationPath_return abbreviatedAbsoluteLocationPath7 =null;


        CommonTree SingleAxisStep4_tree=null;
        CommonTree SingleAxisStep5_tree=null;
        RewriteRuleTokenStream stream_SingleAxisStep=new RewriteRuleTokenStream(adaptor,"token SingleAxisStep");
        RewriteRuleSubtreeStream stream_relativeLocationPath=new RewriteRuleSubtreeStream(adaptor,"rule relativeLocationPath");
        try {
            // org/apache/synapse/xpath/compiler/XPath1.g:54:5: ( SingleAxisStep | SingleAxisStep relativeLocationPath -> ^( RELATIVELOC SingleAxisStep relativeLocationPath ) | abbreviatedAbsoluteLocationPath )
            int alt2=3;
            switch ( input.LA(1) ) {
            case SingleAxisStep:
                {
                switch ( input.LA(2) ) {
                case EOF:
                case And:
                case Comma:
                case EqualityOp:
                case MultiplicativeOP:
                case Or:
                case Pipe:
                case RelationalOp:
                case RightParenthesis:
                case RightSquareBracket:
                case UnaryOp:
                    {
                    alt2=1;
                    }
                    break;
                case AbbreviatedAxisSpecifier:
                case AbbreviatedStep:
                case AxisName:
                case NCName:
                case NodeType:
                case ProcessingInstruction:
                case Star:
                    {
                    alt2=2;
                    }
                    break;
                default:
                    if (state.backtracking>0) {state.failed=true; return retval;}
                    NoViableAltException nvae =
                        new NoViableAltException("", 2, 1, input);

                    throw nvae;

                }

                }
                break;
            case RecursiveAxisStep:
                {
                alt2=3;
                }
                break;
            default:
                if (state.backtracking>0) {state.failed=true; return retval;}
                NoViableAltException nvae =
                    new NoViableAltException("", 2, 0, input);

                throw nvae;

            }

            switch (alt2) {
                case 1 :
                    // org/apache/synapse/xpath/compiler/XPath1.g:54:6: SingleAxisStep
                    {
                    root_0 = (CommonTree)adaptor.nil();


                    SingleAxisStep4=(Token)match(input,SingleAxisStep,FOLLOW_SingleAxisStep_in_absoluteLocationPath270); if (state.failed) return retval;
                    if ( state.backtracking==0 ) {
                    SingleAxisStep4_tree = 
                    (CommonTree)adaptor.create(SingleAxisStep4)
                    ;
                    adaptor.addChild(root_0, SingleAxisStep4_tree);
                    }

                    }
                    break;
                case 2 :
                    // org/apache/synapse/xpath/compiler/XPath1.g:55:7: SingleAxisStep relativeLocationPath
                    {
                    SingleAxisStep5=(Token)match(input,SingleAxisStep,FOLLOW_SingleAxisStep_in_absoluteLocationPath278); if (state.failed) return retval; 
                    if ( state.backtracking==0 ) stream_SingleAxisStep.add(SingleAxisStep5);


                    pushFollow(FOLLOW_relativeLocationPath_in_absoluteLocationPath280);
                    relativeLocationPath6=relativeLocationPath();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) stream_relativeLocationPath.add(relativeLocationPath6.getTree());

                    // AST REWRITE
                    // elements: relativeLocationPath, SingleAxisStep
                    // token labels: 
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    // wildcard labels: 
                    if ( state.backtracking==0 ) {

                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

                    root_0 = (CommonTree)adaptor.nil();
                    // 55:47: -> ^( RELATIVELOC SingleAxisStep relativeLocationPath )
                    {
                        // org/apache/synapse/xpath/compiler/XPath1.g:55:49: ^( RELATIVELOC SingleAxisStep relativeLocationPath )
                        {
                        CommonTree root_1 = (CommonTree)adaptor.nil();
                        root_1 = (CommonTree)adaptor.becomeRoot(
                        (CommonTree)adaptor.create(RELATIVELOC, "RELATIVELOC")
                        , root_1);

                        adaptor.addChild(root_1, 
                        stream_SingleAxisStep.nextNode()
                        );

                        adaptor.addChild(root_1, stream_relativeLocationPath.nextTree());

                        adaptor.addChild(root_0, root_1);
                        }

                    }


                    retval.tree = root_0;
                    }

                    }
                    break;
                case 3 :
                    // org/apache/synapse/xpath/compiler/XPath1.g:56:7: abbreviatedAbsoluteLocationPath
                    {
                    root_0 = (CommonTree)adaptor.nil();


                    pushFollow(FOLLOW_abbreviatedAbsoluteLocationPath_in_absoluteLocationPath302);
                    abbreviatedAbsoluteLocationPath7=abbreviatedAbsoluteLocationPath();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, abbreviatedAbsoluteLocationPath7.getTree());

                    }
                    break;

            }
            retval.stop = input.LT(-1);


            if ( state.backtracking==0 ) {

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "absoluteLocationPath"


    public static class abbreviatedAbsoluteLocationPath_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "abbreviatedAbsoluteLocationPath"
    // org/apache/synapse/xpath/compiler/XPath1.g:59:1: abbreviatedAbsoluteLocationPath : RecursiveAxisStep relativeLocationPath -> ^( RecursiveAxisStep relativeLocationPath ) ;
    public final XPath1Parser.abbreviatedAbsoluteLocationPath_return abbreviatedAbsoluteLocationPath() throws RecognitionException {
        XPath1Parser.abbreviatedAbsoluteLocationPath_return retval = new XPath1Parser.abbreviatedAbsoluteLocationPath_return();
        retval.start = input.LT(1);


        CommonTree root_0 = null;

        Token RecursiveAxisStep8=null;
        XPath1Parser.relativeLocationPath_return relativeLocationPath9 =null;


        CommonTree RecursiveAxisStep8_tree=null;
        RewriteRuleTokenStream stream_RecursiveAxisStep=new RewriteRuleTokenStream(adaptor,"token RecursiveAxisStep");
        RewriteRuleSubtreeStream stream_relativeLocationPath=new RewriteRuleSubtreeStream(adaptor,"rule relativeLocationPath");
        try {
            // org/apache/synapse/xpath/compiler/XPath1.g:59:32: ( RecursiveAxisStep relativeLocationPath -> ^( RecursiveAxisStep relativeLocationPath ) )
            // org/apache/synapse/xpath/compiler/XPath1.g:59:34: RecursiveAxisStep relativeLocationPath
            {
            RecursiveAxisStep8=(Token)match(input,RecursiveAxisStep,FOLLOW_RecursiveAxisStep_in_abbreviatedAbsoluteLocationPath314); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_RecursiveAxisStep.add(RecursiveAxisStep8);


            pushFollow(FOLLOW_relativeLocationPath_in_abbreviatedAbsoluteLocationPath316);
            relativeLocationPath9=relativeLocationPath();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) stream_relativeLocationPath.add(relativeLocationPath9.getTree());

            // AST REWRITE
            // elements: relativeLocationPath, RecursiveAxisStep
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            if ( state.backtracking==0 ) {

            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (CommonTree)adaptor.nil();
            // 59:74: -> ^( RecursiveAxisStep relativeLocationPath )
            {
                // org/apache/synapse/xpath/compiler/XPath1.g:59:76: ^( RecursiveAxisStep relativeLocationPath )
                {
                CommonTree root_1 = (CommonTree)adaptor.nil();
                root_1 = (CommonTree)adaptor.becomeRoot(
                stream_RecursiveAxisStep.nextNode()
                , root_1);

                adaptor.addChild(root_1, stream_relativeLocationPath.nextTree());

                adaptor.addChild(root_0, root_1);
                }

            }


            retval.tree = root_0;
            }

            }

            retval.stop = input.LT(-1);


            if ( state.backtracking==0 ) {

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "abbreviatedAbsoluteLocationPath"


    public static class relativeLocationPath_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "relativeLocationPath"
    // org/apache/synapse/xpath/compiler/XPath1.g:61:1: relativeLocationPath : ( step ( ( SingleAxisStep relativeLocationPathrec ) -> ^( SingleAxisStep step relativeLocationPathrec ) | ( RecursiveAxisStep relativeLocationPathrec ) -> ^( RecursiveAxisStep step relativeLocationPathrec ) ) | step );
    public final XPath1Parser.relativeLocationPath_return relativeLocationPath() throws RecognitionException {
        XPath1Parser.relativeLocationPath_return retval = new XPath1Parser.relativeLocationPath_return();
        retval.start = input.LT(1);


        CommonTree root_0 = null;

        Token SingleAxisStep11=null;
        Token RecursiveAxisStep13=null;
        XPath1Parser.step_return step10 =null;

        XPath1Parser.relativeLocationPathrec_return relativeLocationPathrec12 =null;

        XPath1Parser.relativeLocationPathrec_return relativeLocationPathrec14 =null;

        XPath1Parser.step_return step15 =null;


        CommonTree SingleAxisStep11_tree=null;
        CommonTree RecursiveAxisStep13_tree=null;
        RewriteRuleTokenStream stream_SingleAxisStep=new RewriteRuleTokenStream(adaptor,"token SingleAxisStep");
        RewriteRuleTokenStream stream_RecursiveAxisStep=new RewriteRuleTokenStream(adaptor,"token RecursiveAxisStep");
        RewriteRuleSubtreeStream stream_relativeLocationPathrec=new RewriteRuleSubtreeStream(adaptor,"rule relativeLocationPathrec");
        RewriteRuleSubtreeStream stream_step=new RewriteRuleSubtreeStream(adaptor,"rule step");
        try {
            // org/apache/synapse/xpath/compiler/XPath1.g:62:5: ( step ( ( SingleAxisStep relativeLocationPathrec ) -> ^( SingleAxisStep step relativeLocationPathrec ) | ( RecursiveAxisStep relativeLocationPathrec ) -> ^( RecursiveAxisStep step relativeLocationPathrec ) ) | step )
            int alt4=2;
            switch ( input.LA(1) ) {
            case AxisName:
                {
                int LA4_1 = input.LA(2);

                if ( (synpred5_XPath1()) ) {
                    alt4=1;
                }
                else if ( (true) ) {
                    alt4=2;
                }
                else {
                    if (state.backtracking>0) {state.failed=true; return retval;}
                    NoViableAltException nvae =
                        new NoViableAltException("", 4, 1, input);

                    throw nvae;

                }
                }
                break;
            case AbbreviatedAxisSpecifier:
                {
                int LA4_2 = input.LA(2);

                if ( (synpred5_XPath1()) ) {
                    alt4=1;
                }
                else if ( (true) ) {
                    alt4=2;
                }
                else {
                    if (state.backtracking>0) {state.failed=true; return retval;}
                    NoViableAltException nvae =
                        new NoViableAltException("", 4, 2, input);

                    throw nvae;

                }
                }
                break;
            case Star:
                {
                int LA4_3 = input.LA(2);

                if ( (synpred5_XPath1()) ) {
                    alt4=1;
                }
                else if ( (true) ) {
                    alt4=2;
                }
                else {
                    if (state.backtracking>0) {state.failed=true; return retval;}
                    NoViableAltException nvae =
                        new NoViableAltException("", 4, 3, input);

                    throw nvae;

                }
                }
                break;
            case NCName:
                {
                int LA4_4 = input.LA(2);

                if ( (synpred5_XPath1()) ) {
                    alt4=1;
                }
                else if ( (true) ) {
                    alt4=2;
                }
                else {
                    if (state.backtracking>0) {state.failed=true; return retval;}
                    NoViableAltException nvae =
                        new NoViableAltException("", 4, 4, input);

                    throw nvae;

                }
                }
                break;
            case NodeType:
                {
                int LA4_5 = input.LA(2);

                if ( (synpred5_XPath1()) ) {
                    alt4=1;
                }
                else if ( (true) ) {
                    alt4=2;
                }
                else {
                    if (state.backtracking>0) {state.failed=true; return retval;}
                    NoViableAltException nvae =
                        new NoViableAltException("", 4, 5, input);

                    throw nvae;

                }
                }
                break;
            case ProcessingInstruction:
                {
                int LA4_6 = input.LA(2);

                if ( (synpred5_XPath1()) ) {
                    alt4=1;
                }
                else if ( (true) ) {
                    alt4=2;
                }
                else {
                    if (state.backtracking>0) {state.failed=true; return retval;}
                    NoViableAltException nvae =
                        new NoViableAltException("", 4, 6, input);

                    throw nvae;

                }
                }
                break;
            case AbbreviatedStep:
                {
                int LA4_7 = input.LA(2);

                if ( (synpred5_XPath1()) ) {
                    alt4=1;
                }
                else if ( (true) ) {
                    alt4=2;
                }
                else {
                    if (state.backtracking>0) {state.failed=true; return retval;}
                    NoViableAltException nvae =
                        new NoViableAltException("", 4, 7, input);

                    throw nvae;

                }
                }
                break;
            default:
                if (state.backtracking>0) {state.failed=true; return retval;}
                NoViableAltException nvae =
                    new NoViableAltException("", 4, 0, input);

                throw nvae;

            }

            switch (alt4) {
                case 1 :
                    // org/apache/synapse/xpath/compiler/XPath1.g:62:7: step ( ( SingleAxisStep relativeLocationPathrec ) -> ^( SingleAxisStep step relativeLocationPathrec ) | ( RecursiveAxisStep relativeLocationPathrec ) -> ^( RecursiveAxisStep step relativeLocationPathrec ) )
                    {
                    pushFollow(FOLLOW_step_in_relativeLocationPath337);
                    step10=step();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) stream_step.add(step10.getTree());

                    // org/apache/synapse/xpath/compiler/XPath1.g:63:8: ( ( SingleAxisStep relativeLocationPathrec ) -> ^( SingleAxisStep step relativeLocationPathrec ) | ( RecursiveAxisStep relativeLocationPathrec ) -> ^( RecursiveAxisStep step relativeLocationPathrec ) )
                    int alt3=2;
                    switch ( input.LA(1) ) {
                    case SingleAxisStep:
                        {
                        alt3=1;
                        }
                        break;
                    case RecursiveAxisStep:
                        {
                        alt3=2;
                        }
                        break;
                    default:
                        if (state.backtracking>0) {state.failed=true; return retval;}
                        NoViableAltException nvae =
                            new NoViableAltException("", 3, 0, input);

                        throw nvae;

                    }

                    switch (alt3) {
                        case 1 :
                            // org/apache/synapse/xpath/compiler/XPath1.g:63:9: ( SingleAxisStep relativeLocationPathrec )
                            {
                            // org/apache/synapse/xpath/compiler/XPath1.g:63:9: ( SingleAxisStep relativeLocationPathrec )
                            // org/apache/synapse/xpath/compiler/XPath1.g:63:10: SingleAxisStep relativeLocationPathrec
                            {
                            SingleAxisStep11=(Token)match(input,SingleAxisStep,FOLLOW_SingleAxisStep_in_relativeLocationPath349); if (state.failed) return retval; 
                            if ( state.backtracking==0 ) stream_SingleAxisStep.add(SingleAxisStep11);


                            pushFollow(FOLLOW_relativeLocationPathrec_in_relativeLocationPath352);
                            relativeLocationPathrec12=relativeLocationPathrec();

                            state._fsp--;
                            if (state.failed) return retval;
                            if ( state.backtracking==0 ) stream_relativeLocationPathrec.add(relativeLocationPathrec12.getTree());

                            }

